test/sema/too-few-generic-arguments.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

T foo<T, U>(T a, U b) { return a; }

// CHECK: [[@LINE+3]]:31: error: too few generic arguments to 'foo', expected 2
// CHECK: [[@LINE+2]]:23: error: no matching function 'foo(int, int)'
// CHECK: :3:3: note: candidate function:
void main() { var f = foo<int>(1, 2); }
